--- a/payment.html
+++ b/payment.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/41ca085d-a13b-4bf3-89f6-49287a219f33.png" alt="" style="width:38px;height:38px;border-radius:6px;object-fit:cover"> <span>PinjamBarang</span></div>
+  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:38px;height:38px;border-radius:6px;object-fit:cover"> <span>PinjamBarang</span></div>
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="pinjam.html">PinjamBarang</a>
