--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:38px;height:38px;border-radius:6px;object-fit:cover"> <span>PinjamBarang</span></div>
+  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover">
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="pinjam.html">PinjamBarang</a>
