--- a/browsing.html
+++ b/browsing.html
@@ -36,7 +36,7 @@
       <h4>Drone Mini</h4>
       <div class="small">Rp200.000 / hari</div>
       <div style="margin-top:auto">
-        <button class="btn btn-primary" onclick="addToCart('Drone Mini')">Add to Cart</button>
+        <button class="btn btn-outline" onclick="addToCart('Drone Mini')">Add to Cart</button>
       </div>
     </div>
     <div class="card">
