--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover">
+  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover"></div>
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="pinjam.html">PinjamBarang</a>
@@ -34,19 +34,19 @@
   <h3>Rekomendasi Barang</h3>
   <div class="card-grid">
     <div class="card">
-      <img src="assets/img/f3734792-1c8f-41fa-ac75-5ff002d85bc0.png" alt="item">
-      <h4>Mesin Bor Tangan</h4>
-      <div class="small">Harga: Rp25.000 / hari</div>
+      <img src="assets/img/prj.png" alt="item">
+      <h4>Proyektor Portable</h4>
+      <div class="small">Harga: Rp125.000 / hari</div>
       <div style="margin-top:auto">
-        <a class="btn btn-primary" href="browsing.html" onclick="addToCart('Mesin Bor Tangan')">Add to Cart</a>
+        <a class="btn btn-outline" href="browsing.html" onclick="addToCart('Proyektor Portable')">Add to Cart</a>
       </div>
     </div>
     <div class="card">
-      <img src="assets/img/Prototype PinjamBarang.png" alt="item">
-      <h4>Kamera DSLR</h4>
-      <div class="small">Harga: Rp150.000 / hari</div>
+      <img src="assets/img/VC.png" alt="item">
+      <h4>Vacuum Cleaner</h4>
+      <div class="small">Harga: Rp75.000 / hari</div>
       <div style="margin-top:auto">
-        <a class="btn btn-outline" href="browsing.html" onclick="addToCart('Kamera DSLR')">Add to Cart</a>
+        <a class="btn btn-outline" href="browsing.html" onclick="addToCart('Vacuum Cleaner')">Add to Cart</a>
       </div>
     </div>
   </div>
