--- a/browsing.html
+++ b/browsing.html
@@ -28,7 +28,7 @@
   <div class="search-row">
     <input class="input" placeholder="Cari barang..." id="q">
     <input class="input" type="date" id="tgl">
-    <button class="btn btn-primary" onclick="alert('Pencarian demo — menampilkan hasil yang relevan')">Cari</button>
+    <button class="btn btn-outline" onclick="alert('Pencarian demo — menampilkan hasil yang relevan')">Cari</button>
   </div>
   <div class="card-grid">
     <div class="card">
