--- a/browsing.html
+++ b/browsing.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover">
+  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover"></div>
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="pinjam.html">PinjamBarang</a>
@@ -31,7 +31,7 @@
   </div>
   <div class="card-grid">
     <div class="card">
-      <img src="assets/img/Prototype PinjamBarang (4).png" alt="item">
+      <img src="assets/img/PH.png" alt="item">
       <h4>Drone Mini</h4>
       <div class="small">Rp200.000 / hari</div>
       <div style="margin-top:auto">
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="card">
-      <img src="assets/img/Prototype PinjamBarang (5).png" alt="item">
+      <img src="assets/img/PH.png" alt="item">
       <h4>Mesin Jahit Portable</h4>
       <div class="small">Rp60.000 / hari</div>
       <div style="margin-top:auto">
