--- a/pinjam.html
+++ b/pinjam.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover">
+  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover"></div>
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="pinjam.html">PinjamBarang</a>
@@ -27,15 +27,15 @@
   <p>Cari barang untuk disewa — klik 'Add to Cart' untuk menambahkan.</p>
   <div class="card-grid">
     <div class="card">
-      <img src="assets/img/Prototype PinjamBarang (1).png" alt="item">
+      <img src="assets/img/PH.png" alt="item">
       <h4>Proyektor Mini</h4>
       <div class="small">Rp75.000 / hari</div>
       <div style="margin-top:auto">
-        <button class="btn btn-primary" onclick="addToCart('Proyektor Mini')">Add to Cart</button>
+        <button class="btn btn-outline" onclick="addToCart('Proyektor Mini')">Add to Cart</button>
       </div>
     </div>
     <div class="card">
-      <img src="assets/img/Prototype PinjamBarang (2).png" alt="item">
+      <img src="assets/img/PH.png" alt="item">
       <h4>Speaker Aktif</h4>
       <div class="small">Rp45.000 / hari</div>
       <div style="margin-top:auto">
@@ -43,11 +43,11 @@
       </div>
     </div>
     <div class="card">
-      <img src="assets/img/Prototype PinjamBarang (3).png" alt="item">
+      <img src="assets/img/PH.png" alt="item">
       <h4>Tripod Kamera</h4>
       <div class="small">Rp15.000 / hari</div>
       <div style="margin-top:auto">
-        <button class="btn btn-primary" onclick="addToCart('Tripod Kamera')">Add to Cart</button>
+        <button class="btn btn-outline" onclick="addToCart('Tripod Kamera')">Add to Cart</button>
       </div>
     </div>
   </div>
