--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/Logo.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover"></div>
+  <div class="logo"><img src="assets/img/LogoBW.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover"></div>
   <div class="nav-links">
     <a href="index.html">Home</a>
     <a href="pinjam.html">PinjamBarang</a>
