--- a/tentang.html
+++ b/tentang.html
@@ -5,38 +5,164 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Tentang Kami - PinjamBarang</title>
 <link rel="stylesheet" href="assets/css/style.css">
+<style>
+  body {
+    background-color: #f7faf9;
+    color: #333;
+    font-family: "Inter", sans-serif;
+  }
+  .hero {
+    background: linear-gradient(135deg, #2c6975, #68b2a0);
+    color: #fff;
+    text-align: center;
+    padding: 70px 20px;
+    border-radius: 0 0 60px 60px;
+  }
+  .hero h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  .hero p {
+    font-size: 1.1rem;
+    max-width: 680px;
+    margin: 0 auto;
+    opacity: 0.9;
+  }
+
+  .section {
+    max-width: 960px;
+    margin: 60px auto;
+    padding: 0 20px;
+  }
+
+  .steps {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: center;
+    text-align: center;
+  }
+  .step-card {
+    flex: 1 1 250px;
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+    padding: 25px;
+    transition: transform 0.25s ease;
+  }
+  .step-card:hover {
+    transform: translateY(-5px);
+  }
+  .step-card h3 {
+    color: #2c6975;
+    font-size: 1.2rem;
+    margin-bottom: 10px;
+  }
+
+  .partner {
+    background: #e7f5f3;
+    padding: 60px 20px;
+    border-radius: 30px;
+    text-align: center;
+  }
+  .partner h2 {
+    color: #2c6975;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+  }
+  .partner p {
+    max-width: 600px;
+    margin: 0 auto 20px auto;
+    color: #c0c0c0;
+  }
+  .partner .btn {
+    background: linear-gradient(135deg, #2c6975, #68b2a0);
+    color: #fff;
+    padding: 12px 25px;
+    border-radius: 10px;
+    text-decoration: none;
+    font-weight: 600;
+  }
+  .partner .btn:hover {
+    opacity: 0.9;
+  }
+
+  footer.footer {
+    margin-top: 80px;
+    text-align: center;
+    padding: 20px;
+    background: #2c6975;
+    color: #fff;
+    border-radius: 25px 25px 0 0;
+  }
+</style>
 </head>
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="assets/img/LogoBW.png" alt="" style="width:140;height:55px;border-radius:6px;object-fit:cover"></div>
+  <div class="logo">
+    <img src="assets/img/LogoBW.png" alt="Logo" style="width:140px;height:55px;border-radius:6px;object-fit:cover">
+  </div>
   <div class="nav-links">
     <a href="index.html">Home</a>
-    <a href="pinjam.html">PinjamBarang</a>
     <a href="browsing.html">Browsing</a>
-    <a href="tentang.html">Tentang Kami</a>
+    <a href="tentang.html" class="active">Tentang Kami</a>
     <a href="chat.html">Chat</a>
     <a href="login.html" class="login-btn">Log In / Sign In</a>
-    <span class="cart-badge" id="cartCount">0</span>
+    <a href="pinjam.html" class="cart-link">
+      <img src="assets/img/cart.png" alt="Cart" style="width:25px;vertical-align:middle;">
+      <span class="cart-badge" id="cartCount">0</span>
+    </a>
   </div>
 </nav>
 
+<!-- Hero Section -->
+<section class="hero">
+  <h1>Tentang PinjamBarang</h1>
+  <p style="color:#fcfcfc;">Pilihan cerdas untuk masa depan berkelanjutan — tempat di mana kamu dapat meminjam dan menyewakan barang secara lokal dengan mudah, hemat, dan ramah lingkungan.</p>
+</section>
 
-<div class="container" style="margin-top:28px">
-  <h2>Tentang Kami</h2>
-  <p>PinjamBarang adalah platform prototipe untuk meminjam dan menyewakan barang secara lokal. Cara kerja:</p>
-  <ol>
-    <li>Daftar / masuk sebagai pengguna.</li>
-    <li>Telusuri barang, pilih tanggal pinjam dan tambahkan ke keranjang.</li>
-    <li>Lakukan pembayaran (mock) dan konfirmasi peminjaman.</li>
-  </ol>
-  <h3>Menjadi Mitra</h3>
-  <p>Ingin menyewakan barang Anda? Bergabung sebagai mitra dengan menghubungi kami melalui fitur Chat atau kontak di email demo@pinjambarang.local</p>
-</div>
+<!-- How It Works -->
+<section class="section">
+  <h2 style="text-align:center;margin-bottom:30px;">Bagaimana Cara Kerjanya?</h2>
+  <div class="steps">
+    <div class="step-card">
+      <img src="assets/img/t1.jpg" alt="Step 1" style="width:200px;margin-bottom:10px;">
+      <h3>1. Cari dan Pilih</h3>
+      <p>Jelajahi katalog barang yang tersedia di area kamu. Temukan barang sesuai kebutuhanmu dan tambahkan ke keranjang.</p>
+    </div>
+    <div class="step-card">
+      <img src="assets/img/t2.jpg" alt="Step 2" style="width:200px;margin-bottom:10px;">
+      <h3>2. Sewa dan Bayar</h3>
+      <p>Lakukan pembayaran melalui metode yang kamu pilih. Semua pembayaran bersifat demo dan aman digunakan untuk simulasi.</p>
+    </div>
+    <div class="step-card">
+      <img src="assets/img/t3.jpg" alt="Step 3" style="width:200px;margin-bottom:10px;">
+      <h3>3. Pakai dan Kembalikan</h3>
+      <p>Gunakan barang selama masa sewa, lalu kembalikan sesuai jadwal. Mudah, cepat, dan efisien.</p>
+    </div>
+  </div>
+</section>
+
+<!-- Partner Section -->
+<section class="section partner">
+  <h2>Menjadi Mitra PinjamBarang</h2>
+  <p style="color:#313131;">Punya barang yang jarang kamu gunakan? Jadikan aset itu bermanfaat dengan menyewakannya melalui PinjamBarang. Bersama-sama, kita bantu mengurangi limbah dan menciptakan solusi berkelanjutan bagi banyak orang.
+
+</p>
+  <a href="chat.html" class="btn">Hubungi Kami</a>
+</section>
 
 <footer class="footer">
   © PinjamBarang — Prototype • dibuat untuk demo
 </footer>
+
 <script src="assets/js/script.js"></script>
+<script>
+  // 🛒 Update cart badge
+  const count = localStorage.getItem('cartCount') || 0;
+  document.getElementById('cartCount').textContent = count;
+</script>
 </body>
 </html>
