--- a/tentang.html
+++ b/tentang.html
@@ -92,7 +92,7 @@
     margin-top: 80px;
     text-align: center;
     padding: 20px;
-    background: #2c6975;
+    background: linear-gradient(135deg, #2c6975, #68b2a0);
     color: #fff;
     border-radius: 25px 25px 0 0;
   }
